// CenterServer 与 SceneServer 同步rpc消息
syntax = "proto3";
package fastjgame;

import "p_enum.proto";
import "p_struct.proto";

// optimize_for (file option): Can be set to SPEED, CODE_SIZE, or LITE_RUNTIME.
option optimize_for=SPEED;

// package属性是为了支持多语言的，在其他语言里，可能就是命名空间，因此建议定义清晰的java包名
option java_package="com.wjybxx.fastjgame.protobuffer";
option java_outer_classname = "p_sync_center_scene";

// center同意scene启动，并启动以下互斥区域
message p_center_command_single_scene_start{
    // 命令scene启动以下互斥区域
    repeated int32 activeMutexRegions=1;
}

// 上一条信息的响应，表示成功启动了对应的区域
message p_center_command_single_scene_start_result{

}

// center服让scene服启动以下区域，用在宕机处理时。
message p_center_command_single_scene_active_regions{
    // 让当前进程启动的区域
    repeated int32 activeRegions=2;
}

// 表示scene已处理center发来的启动区域请求
message p_center_command_single_scene_active_regions_result{

}